--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,33 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
+.mainWrapper{
+    width: 100%;
+    height: 100vh;
+    background-color: #3f1c1c;
+    color: #fff;
+}
+
+h1{
+    font-size: 2.5rem;
+    font-weight: 500;
+    color: #444;
+}
+
+.container{
+    width: 100%;
+    max-width: 980px;
+    margin: 0 auto;
+}
+
+
 .med-Img{
     width: 25%;
 }
